[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
version = "1.0.0"
name = "cht_delft3dfm"
authors = [
    {name = "Floortje Roelvink", email = "floortje.roelvink@deltares.nl"},
    {name = "Maarten van Ormondt", email = "maarten.vanormondt@deltares-usa.us"},
]
requires-python = ">=3.10"
dependencies = [
    "geopandas",
    "numpy",
    "pandas",
    "pyproj",
    "shapely",
    "scipy",
    "xarray",
    "matplotlib",
	"xugrid",
    "toml",
    "datashader",
    "cht-utils",
	"dfm_tools",
]
